Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 <h2>
 <a id="总体框架" class="anchor" href="#%E6%80%BB%E4%BD%93%E6%A1%86%E6%9E%B6" aria-hidden="true"><span class="octicon octicon-link"></span></a>总体框架</h2>
 
+<p><img src="https://github.com/ZhangUP/CloudposSDK/blob/master/docs/%E4%BD%95%E6%80%BB%E6%80%BB%E4%BD%93%E6%A1%86%E6%9E%B6%E5%9B%BE.png" alt="image"></p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/ZhangUP/CloudposSDK">CloudposSDK</a> is maintained by <a href="https://github.com/ZhangUP">ZhangUP</a>.</span>
 
